--- a/main/templates/main/Articles/MLAI/1002.html
+++ b/main/templates/main/Articles/MLAI/1002.html
@@ -7,7 +7,7 @@
         <h3>Advantages and Disadvantages of Machine Learning</h3>
     </div>
     <div class="article-content" style="text-align: center;">
-        Article by <b><a href="">Shreyas PJ</a></b>
+        Article by <b><a href="https://www.linkedin.com/in/shreyas-pj-39523619b/">Shreyas PJ</a></b>
         <br>
     </div>
    <p class="article-content">
