--- a/main/templates/main/Articles/MLAI/1003.html
+++ b/main/templates/main/Articles/MLAI/1003.html
@@ -7,7 +7,7 @@
         <h3 class="article-subhead" >Data Science</h3>
     </div>
     <div class="article-content" style="text-align: center;">
-        Article by <b><a href="">Shreyas PJ</a></b><br><br>
+        Article by <b><a href="https://www.linkedin.com/in/shreyas-pj-39523619b/">Shreyas PJ</a></b><br><br>
         <i>
             The world is generating data at a higher rate and so the need for “Data Science” and “Data Analytics” tools increases to analyze and manage this “Big Data”.
         </i>
@@ -135,7 +135,7 @@
         </div>
     </p>
     <div>
-        <h3 class="article-subhead">Most coveted jobs in Data Science.</h3>
+        <h3 class="article-subhead">Most covered jobs in Data Science.</h3>
     </div>
     <p class="article-content">
         <div class="article-content">
