--- a/main/templates/main/Articles/WebDev/1002.html
+++ b/main/templates/main/Articles/WebDev/1002.html
@@ -7,7 +7,7 @@
         <h3>Advantages and Disadvantages Of Web Developement</h3>
     </div>
     <div class="article-content" style="text-align: center;">
-        Article by <b><a href="">Bhabatosh Mahanta</a></b>
+        Article by <b><a href="https://www.linkedin.com/in/bhabatosh-mahanta-a052b71a0/">Bhabatosh Mahanta</a></b>
         <br>
     </div>
     <br>
@@ -50,6 +50,6 @@
             <ul><li>In addition, there will be some access restrictions as to certain hardware features of the device it’s running on.
             </li></ul>
         </div>
-        
+
 </div>
 {% endblock %}
