--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -47,6 +47,8 @@
     <script>(function(w, d) { w.CollectId = "5f7a12a20f65cb31086fdf11"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
 <body>
+    {% block review %}
+    {% endblock %}
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand logo ml-3" href="/">PathaPadha.in</a>
