--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -24,7 +24,7 @@
     <h3 class="mt-5">Python Tutorials (In Odia)</h3>
     <div class="card-deck mb-2 mt-3">
         <div class="card">
-            <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">Python Tutorial #1</h5>
               <div href="#" class="badge badge-warning badge-pill">Trending</div>
@@ -35,7 +35,7 @@
             </ul>
           </div>
           <div class="card" >
-            <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">Python Tutorial #2</h5>
               <div href="#" class="badge badge-danger badge-pill">Hot</div>
@@ -46,7 +46,7 @@
             </ul>
           </div>
           <div class="card" >
-            <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">Python Tutorial #3</h5>
               <div href="#" class="badge badge-primary badge-pill">New</div>
@@ -64,7 +64,7 @@
         <h3 class="mt-3 mb-3">C++ Tutorials (In Odia)</h3>
     <div class="card-deck">
         <div class="card">
-            <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">C++ Tutorial #1</h5>
               <div href="#" class="badge badge-warning badge-pill">Trending</div>
@@ -75,7 +75,7 @@
             </ul>
           </div>
           <div class="card" >
-            <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">C++ Tutorial #2</h5>
               <div href="#" class="badge badge-danger badge-pill">Hot</div>
@@ -86,7 +86,7 @@
             </ul>
           </div>
           <div class="card" >
-            <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">C++ Tutorial #3</h5>
               <div href="#" class="badge badge-primary badge-pill">New</div>
@@ -105,7 +105,7 @@
       <h3 class="mt-3 mb-3">HTML Tutorials (In Odia)</h3>
   <div class="card-deck">
       <div class="card">
-          <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
           <div class="card-body" style="text-align: center;">
             <h5 class="card-title">HTML Tutorial #1</h5>
             <div href="#" class="badge badge-warning badge-pill">Trending</div>
@@ -116,7 +116,7 @@
           </ul>
         </div>
         <div class="card" >
-          <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
           <div class="card-body" style="text-align: center;">
             <h5 class="card-title">HTML Tutorial #2</h5>
             <div href="#" class="badge badge-danger badge-pill">Hot</div>
@@ -127,7 +127,7 @@
           </ul>
         </div>
         <div class="card" >
-          <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
           <div class="card-body" style="text-align: center;">
             <h5 class="card-title">HTML Tutorial #3</h5>
             <div href="#" class="badge badge-primary badge-pill">New</div>
@@ -146,7 +146,7 @@
     <h3 class="mt-3 mb-3">Arduino Tutorials (In Odia)</h3>
 <div class="card-deck">
     <div class="card">
-        <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
         <div class="card-body" style="text-align: center;">
           <h5 class="card-title">Arduino Tutorial #1</h5>
           <div href="#" class="badge badge-warning badge-pill">Trending</div>
@@ -157,7 +157,7 @@
         </ul>
       </div>
       <div class="card" >
-        <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
         <div class="card-body" style="text-align: center;">
           <h5 class="card-title">Arduino Tutorial #2</h5>
           <div href="#" class="badge badge-danger badge-pill">Hot</div>
@@ -168,7 +168,7 @@
         </ul>
       </div>
       <div class="card" >
-        <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <iframe class="embed-responsive card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
         <div class="card-body" style="text-align: center;">
           <h5 class="card-title">Arduino Tutorial #3</h5>
           <div href="#" class="badge badge-primary badge-pill">New</div>
