--- a/main/templates/main/Articles/MLAI/1001.html
+++ b/main/templates/main/Articles/MLAI/1001.html
@@ -7,7 +7,7 @@
         <h3 class="article-subhead">History of Artificial Intelligence and Machine Learning.</h3>
     </div> 
     <div class="article-content" style="text-align: center;">
-        Article by <b><a href="">Shreyas PJ</a></b>
+        Article by <b><a href="https://www.linkedin.com/in/shreyas-pj-39523619b/">Shreyas PJ</a></b>
         <br><br>
         <i>“I visualize a time when we will be to robots what dogs are to humans, and I’m rooting for the machines.” — Claude Shannon.</i>
     </div>
