--- a/main/templates/main/Articles/WebDev/1003.html
+++ b/main/templates/main/Articles/WebDev/1003.html
@@ -7,7 +7,7 @@
         <h3>Roadmap To Become Web Developer</h3>
     </div>
     <div class="article-content" style="text-align: center;">
-        Article by <b><a href="">Bhabatosh Mahanta</a></b>
+        Article by <b><a href="https://www.linkedin.com/in/bhabatosh-mahanta-a052b71a0/">Bhabatosh Mahanta</a></b>
         <br>
     </div>
     <br>
