Website initial finish

--- a/main/templates/main/Articles/C++/1001.html
+++ b/main/templates/main/Articles/C++/1001.html
@@ -15,7 +15,7 @@
         C++ is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language, or "C with Classes". It is a simple and platform-independent programming language.
     </p>
     <div class="img-container" style="text-align:center">
-    <img src="https://www.sitesbay.com/cpp/images/feature-of-cpp.png" alt="1001" class="article-img" style="height: 70%;">
+    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp1_wadzft.png" alt="1001" class="article-img" style="height: 70%;">
     <p classname="article-img-desc">
         <b>
             Features of C++
