--- a/main/templates/main/Articles/C++/1002.html
+++ b/main/templates/main/Articles/C++/1002.html
@@ -41,13 +41,14 @@
     </div>
 </p>
 <div class="img-container" style="text-align: center;">
-    <img class="article-img" style="height: 500px;" src="https://d2h0cx97tjks2p.cloudfront.net/blogs/wp-content/uploads/sites/2/2019/07/Advantages-and-Disadvantages-of-C4.jpg" alt="1001">
-</div>
+    <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp2_mvviqb.png" alt="1001">
+
     <p classname="article-img-desc">
         <b>
             Advantages and Disadvantages of C++ Programming
         </b>
     </p>
+</div>
     <p class="article-subhead">
         Disadvantages of C++
     </p>
