--- a/main/templates/main/Articles/C++/1003.html
+++ b/main/templates/main/Articles/C++/1003.html
@@ -117,7 +117,7 @@
                 </div>
             </p>
             <div class="img-container" style="text-align: center;">
-                <img class="article-img" style="height: 500px;" src="https://devskiller.com/wp-content/uploads/2020/03/cpayscale-experience.png" alt="1001">
+                <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp31_fookav.png" alt="1001">
                 <p classname="article-img-desc">
                     <b>
                         Pay by experience level of C++ developer.
@@ -140,7 +140,8 @@ Finally, C++ is present in most of the operating systems, such as Windows or iOS
                 Based on the above we can surely say C++ is far from its end. Although it is not among the most trendy technologies anymore, it is still irreplaceable in most of the applications named above. In fact, the TIOBE index for May 2017 places C++ in the 3rd place.
             </p>
         </div>
-
+</p>
+</div>
 
 
 
