--- a/main/templates/main/Articles/MLAI/1001.html
+++ b/main/templates/main/Articles/MLAI/1001.html
@@ -13,18 +13,10 @@
     </div>
     <br>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 70%;" src="" alt="1001">
+        <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/mlai1_a7q7ss.png" alt="1001">
         <p classname="article-img-desc">
             <b>
                 7 Decades of evolution.
-            </b>
-        </p>
-    </div>
-    <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 70%;" src="" alt="1001">
-        <p classname="article-img-desc">
-            <b>
-                This shows us that AI was established well before ML.
             </b>
         </p>
     </div>
@@ -56,14 +48,6 @@
              From this, we get to know that AI is technology, and Machine Learning is only one of the tools to solve the problem.
         </div>
     </p>
-    <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 70%;" src="" alt="1001">
-        <p classname="article-img-desc">
-            <b>
-                
-            </b>
-        </p>
-    </div>
     <p class="article-content">
     Machine Learning is the science of getting machines to interpret, process, and analyze data in order to solve real-world problems. Machine Learning is one way to accomplish that. It uses statistical analysis to learn autonomously and improve its function.
     </p>
@@ -76,14 +60,6 @@
     <p class="article-content">
         ML is a core component of many AI uses. It is the part of AI that enables a strand of AI to improve, whether that’s improving an image recognition algorithm to recognize a cat versus a car, or speech recognition being able to understand multiple accents in a given language.
     </p>
-    <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 70%;" src="" alt="1001">
-        <p classname="article-img-desc">
-            <b>
-                
-            </b>
-        </p>
-    </div>
     <p class="article-subhead">
         Deep Learning as part of ML and AI.
     </p>
