--- a/main/templates/main/Articles/MLAI/1002.html
+++ b/main/templates/main/Articles/MLAI/1002.html
@@ -18,7 +18,7 @@
         <ul>
             <li><b>2. Work that matters: </b>Machine learning engineering will allow you to work and build real-world products, right from autonomous cars to security drones. These are not some numbers you crunch into a spreadsheet only to never hear about them again.
         <div class="img-container" style="text-align: center;">
-            <img class="article-img" style="height: 70%;" src="" alt="1001">
+            <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/mlai_2_b5cdaa.png" alt="1001">
             <p classname="article-img-desc">
                 <b>
                     
