--- a/main/templates/main/Articles/WebDev/1001.html
+++ b/main/templates/main/Articles/WebDev/1001.html
@@ -41,6 +41,14 @@ web developers are involved in vary in complexity. They could be
 asked to work on simple web pages one time and multi-layered e-
 commerce web applications the other.
     </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev1_xchixz.png" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Features of Web Development
+            </b>
+        </p>
+    </div>
     <p class="article-subhead">
         What does a web developer do?
     </p> 
