--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -256,29 +256,20 @@
         </div>
       </div>
       <div class="row">
-            <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
+            <div class="col-lg-6 col-md-6 mb-lg-0 mt-2 mb-5">
             <div class="avatar mx-auto">
-                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602048957/Team%20Photo/brushankl_yhltri.jpg" class="rounded-circle z-depth-1"
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603132545/Team%20Photo/IMG_20200325_175940_512_k8pm0g.jpg" class="rounded-circle z-depth-1"
                 alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
-            <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Brushank Patra</h5>
+            <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Sudhanshu Dubey</h5>
             <p class="text-uppercase blue-text mb-0"><strong>Graphic Designer</strong></p>
-            <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ITER, Bhubaneswar</p>
+            <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">BMS College, Bangalore</p>
             <ul class="list-unstyled mb-0">
-                <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/iambrushank" style="color: black; text-decoration: none;">
-                    <i class="fab fa-facebook-f fb blue-text"> </i>
-                  </a>
-                  <a class="p-2 fa-lg tw-ic" href="https://twitter.com/iambrushank" style="color: black; text-decoration: none;">
+                  <a class="p-2 fa-lg tw-ic" href="https://twitter.com/iamcyrus" style="color: black; text-decoration: none;">
                     <i class="fab fa-twitter tt blue-text"> </i>
                   </a>
-                  <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/iambrushank/" style="color: black; text-decoration: none;">
+                  <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/_iamsudhanshudubey_/" style="color: black; text-decoration: none;">
                     <i class="fab fa-instagram insta blue-text"> </i>
-                  </a>
-                  <a class="p-2 fa-lg ins-ic" href="https://www.linkedin.com/in/brushank-patra-a440381b2/" style="color: black; text-decoration: none;">
-                    <i class="fab fa-linkedin linkedin blue-text"> </i>
-                  </a>
-                  <a class="p-2 fa-lg ins-ic" href="https://github.com/BrushankPatra" style="color: black; text-decoration: none;">
-                    <i class="fab fa-github blue-text"> </i>
                   </a>
             </ul>
             </div>
