--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -35,7 +35,7 @@
             <p class="article-content">Are You Confused about your career? Do you want to know about the different career paths that you can take upon to land at a perfect job in India? Then you are at the right place.</p>
             <p class="article-content"> We have brought to you the most popular technology that you should start working on in order to get a good job in India.</p>
             <div class="img-container mb-2" style="text-align: center;">
-              <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602355418/Resources/Word_Art_2_t5hvjp.jpg" alt="1001">
+              <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603132426/Resources/Word_Art_xhshb8.png" alt="1001">
             </div>
             <p class="article-content">Browse through the above categories and know more about them.</p>
           </div>
@@ -43,7 +43,7 @@
              <div class="card mb-3">
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/Python_1_Sample_ijgzcg.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -59,7 +59,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-article" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/PYTHON1copy_aqmzra.png" class="card-img article-main-article" style="height: 300px;" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -75,7 +75,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/PYTHON21_wsbzeo.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -93,7 +93,7 @@
             <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp1_wadzft.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -109,7 +109,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp2_mvviqb.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -125,7 +125,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp31_fookav.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -143,7 +143,7 @@
             <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/mlai1_a7q7ss.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -159,7 +159,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/mlai_2_b5cdaa.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -175,7 +175,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai4_ogkqsg.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -193,7 +193,7 @@
             <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev1_xchixz.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -209,7 +209,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev2_amhvh1.png" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
@@ -225,7 +225,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" class="card-img article-main-img" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/WEBDEV4_wmjonq.png" style="height: 300px;" class="card-img article-main-img" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
