--- a/main/templates/main/Articles/Python/1002.html
+++ b/main/templates/main/Articles/Python/1002.html
@@ -71,7 +71,7 @@
         </div>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/PYTHON1copy_aqmzra.png" alt="1001">
         <p classname="article-img-desc">
             <b>
                 Advantages and Disadvantages of Python Programming
