--- a/main/templates/main/Articles/Python/1003.html
+++ b/main/templates/main/Articles/Python/1003.html
@@ -133,10 +133,10 @@
         </div>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/python3_nshjg3.png" alt="1001">
         <p classname="article-img-desc">
             <b>
-                Features of Python Programming
+                Roadmap to become Python Developer
             </b>
         </p>
     </div>
@@ -207,10 +207,10 @@
         </div>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/PYTHON21_wsbzeo.png" alt="1001">
         <p classname="article-img-desc">
             <b>
-                Features of Python Programming
+                Salary of Python Programmer in India
             </b>
         </p>
     </div>
