--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -262,7 +262,7 @@
                 alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Sudhanshu Dubey</h5>
-            <p class="text-uppercase blue-text mb-0"><strong>Graphic Designer</strong></p>
+            <p class="text-uppercase blue-text mb-0"><strong>Video Editor</strong></p>
             <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">BMS College, Bangalore</p>
             <ul class="list-unstyled mb-0">
                   <a class="p-2 fa-lg tw-ic" href="https://twitter.com/iamcyrus" style="color: black; text-decoration: none;">
