--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -59,7 +59,7 @@
               <div class="card mb-3" >
                 <div class="row no-gutters">
                   <div class="col-md-6">
-                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/PYTHON1copy_aqmzra.png" class="card-img article-main-article" style="height: 300px;" alt="...">
+                    <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/PYTHON1copy_aqmzra.png" class="card-img article-main-img" style="height: 300px;" alt="...">
                   </div>
                   <div class="col-md-6">
                     <div class="card-body">
