--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="https://res.cloudinary.com/pathapadha-in/image/upload/v1602427875/Resources/Logo_arsn4v.png" type="image/icon type">
+    <link rel="icon" href="https://res.cloudinary.com/pathapadha-in/image/upload/v1603477015/Resources/circle-cropped_f7sgrb.png" type="image/icon type">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block header %}
@@ -22,6 +22,9 @@
         .nav-link:hover{
             color: #51ffc5;
         }
+        .navbar-nav{
+            margin-left: 4%;
+        }
         .home-image{
             display: inline-block;
             vertical-align: middle;
@@ -34,6 +37,65 @@
         .logo:hover{
             color: #51ffc5;
         }
+        .awesome {
+            -webkit-animation:colorchange 8s infinite alternate;
+          }
+      
+          @-webkit-keyframes colorchange {
+            0% {
+              
+              color: blue;
+            }
+            
+            10% {
+              
+              color: #8e44ad;
+            }
+            
+            20% {
+              
+              color: cornflowerblue;
+            }
+            
+            30% {
+              
+              color: darkblue;
+            }
+            
+            40% {
+              
+              color:darkmagenta;
+            }
+            
+            50% {
+              
+              color: #783c9b;
+            }
+            
+            60% {
+              
+              color: blue;
+            }
+            
+            70% {
+              
+              color: #2980b9;
+            }
+            80% {
+           
+              color: cyan;
+            }
+            
+            90% {
+           
+              color: darkblue;
+            }
+            
+            100% {
+              
+              color: darkcyan;
+            }
+          }
         @media only screen and (max-width: 559px){
             .d-block{
                 height: 25rem;
