--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -88,5 +88,27 @@
             <button type="submit" class="btn btn-primary">Submit Feedback</button>
         </div>
       </form>
+      <div class="row" style="border: 1px solid black; padding: 2%; margin: 2%">
+        <div class="col-xs-12 col-sm-12 col-md-6">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3743.1465147154636!2d85.78236441491975!3d20.252757486423906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19a794e985622d%3A0x1e5468325c487d1b!2sPathaPadha.in!5e0!3m2!1sen!2sin!4v1603257479301!5m2!1sen!2sin" style="height: 24rem; width: 100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 mt-5">
+          <div style="text-align: center;">
+            <ul class="list-unstyled mb-0">
+              <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                  <p class="article-content">Bhubaneswar, Odisha, India</p>
+              </li>
+
+              <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                  <p class="article-content">+91-8093430989</p>
+              </li>
+
+              <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                  <p class="article-content">in.pathapadha@gmail.com</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 </div>
 {% endblock %}
