--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -15,16 +15,21 @@
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <svg width="2em" height="2em" style="color: white; margin-right: 75%;" viewBox="0 0 16 16" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <svg width="2em" height="2em" style="color: white; margin-right: 60%;" viewBox="0 0 16 16" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
           </svg>
     </a>
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <svg width="2em" height="2em" style="color: white; margin-left: 75%;" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <svg width="2em" height="2em" style="color: white; margin-left: 60%;" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
         </svg>
     </a>
   </div>
+<div class="container-fluid mt-1 mb-1 section2 text-center" style="padding:4%">
+    <h1 style="font-weight: 700; color: black">Starting Your Coding Journey? Join Us</h1><br>
+    <h1 style="font-weight: 1000; font-family:cursive" class="awesome">THE FIRST EVER ODIA E-LEARNING PLATFORM FOR FREE</h1><br>
+    <h1 style="font-weight:700; color: black">Your Journey, Our Responsibilty</h1>
+</div>
 <div class="container-fluid section1">
 <div class="container mt-3">
     <div style="text-align: center;">
